[JSC] Syntax error should be thrown for logical assignment expressions where the LHS is a function call. https://bugs.webkit.org/show_bug.cgi?id=272524

Reviewed by Alexey Shvayka.

JSC throws a Reference Error instead of a Syntax Error for logical assignment expressions where the LHS is a function call in sloppy mode. According to the commit[2] when logical assignment expressions were implemented in JSC, this was intentional. However, four years have passed, and the related specification has not been updated, while other JS engines throw a Syntax Error.

This patch changes the behavior to throw a Syntax Error for such logical assignment expressions even in sloppy mode.

[1]: https://tc39.es/ecma262/#sec-assignment-operators-static-semantics-early-errors
[2]: https://commits.webkit.org/223412@main

* JSTests/stress/bytecode-for-rmw-with-invalid-right-side.js:
* JSTests/stress/logical-assignment-with-func-call-lhs.js: Added.
(shouldThrowSyntaxError):
* JSTests/test262/expectations.yaml:
* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::isSimpleAssignmentTarget):
(JSC::Parser<LexerType>::parseAssignmentExpression):
* Source/JavaScriptCore/parser/Parser.h:

Canonical link: https://commits.webkit.org/277536@main